--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -5,7 +5,7 @@
 @import "tailwindcss";
 @import "tailwindcss-animated";
 @custom-variant dark (&:is(.dark *));
-
+@import "leaflet/dist/leaflet.css";
 /* In your global.css */
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
